--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,59 @@
     </properties>
 
     <dependencies>
-    
+
+
+        <!-- hanler database -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.3.0</version>
-    
         </dependency>
+
+        <!-- creator http server  -->
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-grizzly2-http</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
+        <!-- jersey dependecy rest api -->
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
+        <!-- jersey server -->
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-grizzly2-http</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
+        <!-- handler injection dependecy of jersey -->
+
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+        
+        <!-- json a class with jackson -->
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
+        <!-- Jackson para que reciba LocalDate  -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.2</version> <!-- Asegúrate de usar la versión compatible con tu versión de Jackson -->
+        </dependency>
+
+
     </dependencies>
 
 </project>
