:sparkles: add new feactures

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,32 @@
             <version>2.15.2</version> <!-- Asegúrate de usar la versión compatible con tu versión de Jackson -->
         </dependency>
 
+        <!-- jakarta bean para hacer verificaciones -->
 
+        <!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <!-- implementacion de jakarta bean -->
+        <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.2.Final</version>
+        </dependency>
+
+
+        <!-- para usar valid en api rest -->
+
+        <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.ext/jersey-bean-validation -->
+        <dependency>
+            <groupId>org.glassfish.jersey.ext</groupId>
+            <artifactId>jersey-bean-validation</artifactId>
+            <version>3.1.10</version>
+        </dependency>
     </dependencies>
 
 </project>
